[tool.poetry]
name = "youtube-music-downloader"
version = "0.1.0"
description = ""
authors = ["redyf <mateusalvespereira7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
youtube_dl = "^2021.12.17"
pytube = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
